--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   },
+  "homepage": "https://shubham012.github.io/PortfolioWebsite",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,7 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
-  
-
 }
